--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     <form action="https://formspree.io/f/xvoegazg" method="post">
         <div class="form-group">
             <label>Nome:</label>
-            <input placeholder="Insira seu nome aqui" type="text">
+            <input name="name" placeholder="Insira seu nome aqui" type="text">
         </div>
         </div>
         <div class="form-group">
             <label>E-mail:</label>
-            <input placeholder="Insira seu e-mail aqui" type="text">
+            <input name="email" placeholder="Insira seu e-mail aqui" type="text">
         </div>
         <div class="form-group">
             <label>Telefone:</label>
-            <input placeholder="(99) 9999-9999" type="text">
+            <input name="phone" placeholder="(99) 9999-9999" type="text">
         </div>
         <div class="form-group">
             <label>Em que podemos ajudar?</label>
